--- a/CUG-client/package.json
+++ b/CUG-client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "axios": "^1.7.2",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3",
