--- a/CUG-client/package.json
+++ b/CUG-client/package.json
@@ -16,13 +16,15 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
     "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
