--- a/CUG-client/package.json
+++ b/CUG-client/package.json
@@ -24,7 +24,8 @@
     "react-phone-number-input": "^3.4.3",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
