--- a/CUG-server/package.json
+++ b/CUG-server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "papaparse": "^5.4.1",
     "react-toastify": "^10.0.5",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
